<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
  android:paddingTop="12dp"
    android:paddingEnd="12dp"
    android:paddingStart="12dp"
    android:background="@color/backgroundApp"
    android:layout_gravity="center_horizontal">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btn_greet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saludo"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/buttonCalculate" />
        <Button
            android:id="@+id/btn_imc_calculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculadora_de_imc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_greet"
            android:backgroundTint="@color/buttonCalculate"
            android:layout_marginBottom="16dp"/>
        <Button
            android:id="@+id/btn_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/market_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_greet"
            android:backgroundTint="@color/buttonCalculate"
            android:layout_marginBottom="16dp"/>
        <Button
            android:id="@+id/btn_sentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/positive_sentences"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_shopping"
            android:backgroundTint="@color/buttonCalculate"/>
    </androidx.appcompat.widget.LinearLayoutCompat>




</androidx.constraintlayout.widget.ConstraintLayout>