<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shoppingList.ShoppingActivity"
    android:padding="20dp"
    android:background="@color/backgroundApp">
    <TextView
        android:id="@+id/tv_shopping_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/shopping_list"
        android:textSize="40sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_shopping_category"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_shopping_tittle"
        android:text="@string/category"
        android:textStyle="bold" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_shopping_category"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_shopping_category" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_shopping_product"
        android:text="@string/product"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_shopping_category"
        android:textStyle="bold"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_shopping_product"
        app:layout_constraintTop_toBottomOf="@+id/tv_shopping_product"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonCalculate"
        android:contentDescription="@string/Normal"
        android:src="@drawable/ic_plus"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/fab_shopping_add_product"/>


</androidx.constraintlayout.widget.ConstraintLayout>