<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    android:paddingVertical="20dp"
    android:background="@color/backgroundApp"
    tools:context=".IMCCalculate.ResultIMCCalculatorActivity">

    <TextView
        android:id="@+id/tv_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tu_resultado"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/backgroundCardNotSelected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tittle"
        app:layout_constraintBottom_toTopOf="@+id/bt_recalcutate_imc"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">
            <TextView
                android:id="@+id/tv_result"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/Normal" />
            <TextView
                android:id="@+id/tv_imc_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="22"
                android:textSize="70sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tv_imc_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="fdeesrbefs"
                android:textSize="16sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/bt_recalcutate_imc"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/recalcular"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/buttonCalculate" />

</androidx.constraintlayout.widget.ConstraintLayout>