<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IMCCalculate.IMCCalculatorActivity"
    android:paddingHorizontal="32dp"
    android:paddingVertical="20dp"
    android:background="@color/backgroundApp">
    <androidx.cardview.widget.CardView
        android:id="@+id/male"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        android:background="@color/backgroundCardSelected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/female"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="5dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:text="@string/hombre"
                android:textColor="@color/white"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/female"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        android:background="@color/backgroundCardNotSelected"
        app:layout_constraintStart_toEndOf="@+id/male"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="5dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mujer"
                android:textSize="32sp"
                android:textColor="@color/white"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/female"
        android:layout_margin="5dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/backgroundCardSelected">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/altura"
                android:textSize= "20sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tv_height_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100.00 cm"
                android:textSize="32sp"
                android:textColor="@color/white"/>

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rs_height"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stepSize="1"
                android:valueFrom="100"
                android:valueTo="200"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/weigh"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/backgroundCardSelected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_height"
        app:layout_constraintEnd_toStartOf="@+id/age"
        android:layout_marginStart="5dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_weigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/peso"
                android:textSize= "20sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tv_weigh_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60"
                android:textSize="32sp"
                android:textColor="@color/white"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/substract_weigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_substract"
                   android:backgroundTint="@color/backgroundCardNotSelected"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/plus_weigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_plus"
                    android:backgroundTint="@color/backgroundCardNotSelected"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/backgroundCardSelected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_height"
        app:layout_constraintStart_toEndOf="@+id/weigh"
        android:layout_marginStart="5dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/edad"
                android:textSize= "20sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tv_age_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18"
                android:textSize="32sp"
                android:textColor="@color/white"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/substract_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_substract"
                    android:background="@color/backgroundCardSelected"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/plus_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_plus"
                    android:background="@color/backgroundCardSelected"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/bt_calcutate_imc"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/calcular_imc"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/buttonCalculate" />

</androidx.constraintlayout.widget.ConstraintLayout>